# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2015-10-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add comment to cloudi_service_http_rest

2015-10-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add query_get_format configuration argument to both
      cloudi_service_http_cowboy and cloudi_service_http_elli
      with the default set to 'raw' (to get the previous default behavior,
      set to 'text_pairs')
    * Update backward-cpp
    * Add basic comments to cloudi_service_http_rest

2015-10-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix false negative from dialyzer when CLOUDI_CORE_STANDALONE is defined

2015-09-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Tweak hello_world5 example type spec

2015-09-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Use newer msgpack spec for string format

2015-09-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add type specification macros for cloudi_service_http_rest with a new
      cloudi_service_http_rest.hrl file

2015-09-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add more details to the hello_world5 example.
    * Update the other examples to have reltool.config comments and modelines
    * Fix Elixir.HelloWorld1 example

2015-09-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_trans_id for Erlang usage of the
      CloudI service request transaction id
    * Update uuid

2015-09-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update trie
    * Fix parameter parsing due to pattern matching with the
      service name and service name pattern with functions like
      cloudi_service_name:parse/2 (now "*/" will parse "//" AND "///")
    * Handle bad parameters as a crash in cloudi_service_http_rest

2015-09-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix URL parameter errors in cloudi_service_http_rest

2015-09-08 Michael Truog   <mjtruog [at] gmail (dot) com>
