@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2015-11-03 Dmitriy Mazurin <dimas.m.19 [at] gmail (dot) com>
+
+    * Update erlang_term to fix improper list size check
+
 2015-10-27 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add comment to cloudi_service_http_rest
